flex-wrapping layout fixes

--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -6,20 +6,23 @@
     align-items: center;
 }
 
-.logo-container-underline {
-    display: flex;
-    flex-direction: column;
-}
-
 .logo-container {
     display: flex;
     align-items: flex-end;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.logo {
+    margin-top: 40px;
+    margin-left: -117px;
+    margin-right: -117px;
 }
 
 .lusa-development {
     display: flex;
     z-index: 1;
-    margin-right: -117px;
     user-select: none;
 }
 
