--- a/src/hire/Hire.css
+++ b/src/hire/Hire.css
@@ -1,5 +1,13 @@
+.form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+}
+
 .Input-email {
-    width: inherit;
+    display: flex;
+    flex: 1;
     font-weight: 300;
     font-size: 29px;
     letter-spacing: -0.6px;
@@ -18,8 +26,11 @@
 }
 
 .Input-message {
+    display: flex;
+    flex: 1;
     font-weight: 300;
     font-size: 29px;
+    letter-spacing: -0.6px;
     border-width: 2px;
     border-radius: 10px;
     border-color: rgb(238, 238, 238);
@@ -29,10 +40,11 @@
     height: 186px;
     text-align: start;
     resize: none;
-    width: 620px;
 }
 
 .Attach-button {
+    display: flex;
+    flex: 1;
     font-weight: 500;
     font-size: 28px;
     text-align: center;
@@ -55,10 +67,10 @@
     border-radius: 10px;
 }
 
-.Contact-form {
+.form-inputs {
     display: flex;
+    flex: 1;
     flex-direction: column;
-    align-items: center;
     width: 660px;
 }
 
