--- a/src/recent-work/RecentWork.css
+++ b/src/recent-work/RecentWork.css
@@ -7,12 +7,19 @@
 
 .published-apps-croparking-container {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .published-apps-croparking-description-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 70px;
+    margin-right: 70px;
+    margin-bottom: 40px;
+    margin-top: 20px;
 }
 
 .RecentWork-title {
