--- a/src/what-we-do/WhatWeDo.css
+++ b/src/what-we-do/WhatWeDo.css
@@ -8,4 +8,5 @@
 .what-we-do-item-description {
     letter-spacing: -0.2px;
     font-size: 28px;
+    text-align: center;
 }
